--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
+  margin: 10px auto;
+  background: white;
+  height: 400px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  /* flex-direction: column; */
+  color: #333333;
+  font-size: 32px;
+  font-weight: 400;
+  border-radius: 8px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  position: relative;
+  cursor: pointer;
+  /* animated interactivity */
+  transition: 250ms;
+  transform-style: preserve-3d;
+  transform: perspective(1000px) rotateY(var(--rotate-y, 0))
+    translateY(var(--translate-y, 0));
+}
+
+/* when card is clicked adding .side class */
+.side {
+  background: white;
+  transform: rotateY(-180deg);
+}
+
+/* card content */
+.card .front,
+.card .back {
+  position: absolute;
+  padding: 1rem;
+  backface-visibility: hidden;
+}
+
+.card .front {
+  transform: rotateY(0deg);
+}
+
+.card.side .front {
+  opacity: 0;
+  display: none;
+}
+
+.card .back {
+  transform: rotateY(180deg);
+}
+
+.card small {
+  opacity: 0.7;
+  font-size: 0.7em;
+  position: absolute;
+  top: 3rem;
+}
+
+.card.side small {
+  transform: rotateY(180deg);
+}
+
+.card small span {
+  display: block;
+  text-align: center;
+  font-size: small;
+}
+
+.loading {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  width: 350px;
+  text-align: center;
+  margin: 20px auto;
 }
